First implementation acp

--- a/template_branche.ipynb
+++ b/template_branche.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "c9eaaaa3",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,8 @@
     "from sklearn.metrics.cluster import normalized_mutual_info_score, adjusted_rand_score\n",
     "from sentence_transformers import SentenceTransformer\n",
     "import numpy as np\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.cluster import KMeans\n",
     "\n",
     "'''\n",
     "Variables: \n",
@@ -28,12 +30,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e77a0f00",
    "metadata": {},
    "outputs": [],
    "source": [
     "def dim_red(mat, p):\n",
+    "\n",
+    "    pca = PCA(n_components=p)\n",
+    "    red_mat = pca.fit_transform(mat)\n",
     "    '''\n",
     "    Perform dimensionality reduction\n",
     "\n",
@@ -53,32 +58,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "9f2ae938",
    "metadata": {},
    "outputs": [],
    "source": [
     "def clust(mat, k):\n",
-    "    '''\n",
-    "    Perform clustering\n",
-    "\n",
-    "    Input:\n",
-    "    -----\n",
-    "        mat : input list \n",
-    "        k : number of cluster\n",
-    "    Output:\n",
-    "    ------\n",
-    "        pred : list of predicted labels\n",
-    "    '''\n",
     "    \n",
+    "    kmeans = KMeans(n_clusters=k)\n",
+    "    pred = kmeans.fit_predict(mat)\n",
     "    pred = np.random.randint(k, size=len(corpus))\n",
+    "\n",
     "    \n",
     "    return pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "a7ca9d2f",
    "metadata": {},
    "outputs": [
@@ -86,8 +83,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NMI: 0.47 \n",
-      "ARI: -0.01\n"
+      "NMI: 0.03 \n",
+      "ARI: -0.00\n"
      ]
     }
    ],
@@ -114,6 +111,13 @@
     "\n",
     "print(f'NMI: {nmi_score:.2f} \\nARI: {ari_score:.2f}')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -132,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
