modification de first implementation

--- a/template_branche.ipynb
+++ b/template_branche.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "e77a0f00",
    "metadata": {},
    "outputs": [],
@@ -39,26 +39,16 @@
     "\n",
     "    pca = PCA(n_components=p)\n",
     "    red_mat = pca.fit_transform(mat)\n",
-    "    '''\n",
-    "    Perform dimensionality reduction\n",
     "\n",
-    "    Input:\n",
-    "    -----\n",
-    "        mat : NxM list \n",
-    "        p : number of dimensions to keep \n",
-    "    Output:\n",
-    "    ------\n",
-    "        red_mat : NxP list such that p<<m\n",
-    "    '''\n",
     "    \n",
-    "    red_mat = mat[:,:p]\n",
+    "    #red_mat = mat[:,:p]\n",
     "    \n",
     "    return red_mat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "9f2ae938",
    "metadata": {},
    "outputs": [],
@@ -67,7 +57,7 @@
     "    \n",
     "    kmeans = KMeans(n_clusters=k)\n",
     "    pred = kmeans.fit_predict(mat)\n",
-    "    pred = np.random.randint(k, size=len(corpus))\n",
+    "    #pred = np.random.randint(k, size=len(corpus))\n",
     "\n",
     "    \n",
     "    return pred"
@@ -75,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "a7ca9d2f",
    "metadata": {},
    "outputs": [
@@ -83,8 +73,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NMI: 0.03 \n",
-      "ARI: -0.00\n"
+      "NMI: 0.41 \n",
+      "ARI: 0.23\n"
      ]
     }
    ],
