First implementation TSNE

--- a/template_branche.ipynb
+++ b/template_branche.ipynb
@@ -2,10 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c9eaaaa3",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c9eaaaa3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.datasets import fetch_20newsgroups\n",
     "from sklearn.metrics.cluster import normalized_mutual_info_score, adjusted_rand_score\n",
@@ -23,19 +39,23 @@
     "labels : documents labels\n",
     "pred : list of clustering predicted clusters \n",
     "\n",
-    "''';"
+    "'''\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "e77a0f00",
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.manifold import TSNE\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
     "def dim_red(mat, p):\n",
     "    '''\n",
-    "    Perform dimensionality reduction\n",
+    "    Perform dimensionality reduction using t-SNE\n",
     "\n",
     "    Input:\n",
     "    -----\n",
@@ -46,48 +66,47 @@
     "        red_mat : NxP list such that p<<m\n",
     "    '''\n",
     "    \n",
-    "    red_mat = mat[:,:p]\n",
+    "    tsne = TSNE(random_state=42)\n",
+    "    red_mat = tsne.fit_transform(mat)\n",
     "    \n",
     "    return red_mat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "9f2ae938",
    "metadata": {},
    "outputs": [],
    "source": [
     "def clust(mat, k):\n",
-    "    '''\n",
-    "    Perform clustering\n",
-    "\n",
-    "    Input:\n",
-    "    -----\n",
-    "        mat : input list \n",
-    "        k : number of cluster\n",
-    "    Output:\n",
-    "    ------\n",
-    "        pred : list of predicted labels\n",
-    "    '''\n",
-    "    \n",
-    "    pred = np.random.randint(k, size=len(corpus))\n",
-    "    \n",
+    "    kmeans = KMeans(n_clusters=k)\n",
+    "    pred = kmeans.fit_predict(mat)\n",
     "    return pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "a7ca9d2f",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\manifold\\_t_sne.py:800: FutureWarning: The default initialization in TSNE will change from 'random' to 'pca' in 1.2.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\sklearn\\manifold\\_t_sne.py:810: FutureWarning: The default learning rate in TSNE will change from 200.0 to 'auto' in 1.2.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NMI: 0.47 \n",
-      "ARI: -0.01\n"
+      "NMI: 0.43 \n",
+      "ARI: 0.25\n"
      ]
     }
    ],
@@ -114,6 +133,20 @@
     "\n",
     "print(f'NMI: {nmi_score:.2f} \\nARI: {ari_score:.2f}')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -132,7 +165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
