mise en oeuvre de hdbscan

--- a/template_branche.ipynb
+++ b/template_branche.ipynb
@@ -685,6 +685,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sencond Model of Clustering \"HDBScan\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import DBSCAN\n",
+    "def clusthdbs(mat):\n",
+    "    clusterer = hdbscan.HDBSCAN()\n",
+    "    pred = clusterer.fit_predict(mat)\n",
+    "    return pred"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
