mise en ouvre HDBSCan au lieu de Kmeans

--- a/template_branche.ipynb
+++ b/template_branche.ipynb
@@ -1023,6 +1023,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sencond Model of Clustering \"HDBScan\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import DBSCAN\n",
+    "\n",
+    "def clusthdbs(mat):\n",
+    "    clusterer = hdbscan.HDBSCAN()\n",
+    "    pred = clusterer.fit_predict(mat)\n",
+    "    return pred"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
