--- a/experiments/template_branche_TSNE.ipynb
+++ b/experiments/template_branche_TSNE.ipynb
@@ -9,17 +9,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "c9eaaaa3",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\PC\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'\\nVariables: \\n---------\\n\\ncorpus : list of documents\\nembeddings : documents embeddings of size NxM (N : number of documents, M : embedding dimension) \\nred_emd : reduced embeddings matrix using dimentionality reduction\\nk : number of clusters\\nlabels : documents labels\\npred : list of clustering predicted clusters \\n\\n'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "id": "e77a0f00",
    "metadata": {},
    "outputs": [],
@@ -76,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "id": "9f2ae938",
    "metadata": {},
    "outputs": [],
@@ -1031,14 +1039,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.cluster import DBSCAN\n",
     "\n",
     "def clusthdbs(mat):\n",
-    "    clusterer = hdbscan.HDBSCAN()\n",
+    "    clusterer = dbscan.HDBSCAN()\n",
     "    pred = clusterer.fit_predict(mat)\n",
     "    return pred"
    ]
@@ -1049,6 +1057,39 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import data\n",
+    "ng20 = fetch_20newsgroups(subset='test')\n",
+    "corpus = ng20.data[:2000]\n",
+    "labels = ng20.target[:2000]\n",
+    "k = len(set(labels))\n",
+    "\n",
+    "# embedding\n",
+    "model = SentenceTransformer('paraphrase-MiniLM-L6-v2')\n",
+    "embeddings = model.encode(corpus)\n",
+    "\n",
+    "# perform dimentionality reduction\n",
+    "red_emb = dim_red(embeddings, 3)\n",
+    "\n",
+    "# perform clustering\n",
+    "pred = clusthdbs(red_emb)\n",
+    "\n",
+    "# evaluate clustering results\n",
+    "nmi_score = normalized_mutual_info_score(pred,labels)\n",
+    "ari_score = adjusted_rand_score(pred,labels)\n",
+    "\n",
+    "print(f'NMI: {nmi_score:.2f} \\nARI: {ari_score:.2f}')\n",
+    "\n",
+    "#########################################################\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
