add cross validation and hdbscan

--- a/experiments/template_branche_umap.ipynb
+++ b/experiments/template_branche_umap.ipynb
@@ -2,10 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "id": "c9eaaaa3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/homebrew/lib/python3.11/site-packages/umap/distances.py:1063: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n",
+      "  @numba.jit()\n",
+      "/opt/homebrew/lib/python3.11/site-packages/umap/distances.py:1071: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n",
+      "  @numba.jit()\n",
+      "/opt/homebrew/lib/python3.11/site-packages/umap/distances.py:1086: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n",
+      "  @numba.jit()\n",
+      "/opt/homebrew/lib/python3.11/site-packages/umap/umap_.py:660: NumbaDeprecationWarning: \u001b[1mThe 'nopython' keyword argument was not supplied to the 'numba.jit' decorator. The implicit default value for this argument is currently False, but it will be changed to True in Numba 0.59.0. See https://numba.readthedocs.io/en/stable/reference/deprecation.html#deprecation-of-object-mode-fall-back-behaviour-when-using-jit for details.\u001b[0m\n",
+      "  @numba.jit()\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.datasets import fetch_20newsgroups\n",
     "from sklearn.metrics.cluster import normalized_mutual_info_score, adjusted_rand_score\n",
@@ -38,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "id": "e77a0f00",
    "metadata": {},
    "outputs": [],
@@ -67,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "id": "9f2ae938",
    "metadata": {},
    "outputs": [],
@@ -93,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "id": "a7ca9d2f",
    "metadata": {},
    "outputs": [],
@@ -102,7 +117,7 @@
     "ng20 = fetch_20newsgroups(subset='test')\n",
     "corpus = ng20.data[:2000]\n",
     "labels = ng20.target[:2000]\n",
-    "k = len(set(labels))\n"
+    "k = len(set(labels))"
    ]
   },
   {
@@ -760,6 +775,121 @@
     ")\n",
     "plt.suptitle('Pair Plot of Clusters', y=1.02)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2459e5a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pour k = 15, NMI: 0.47, ARI: 0.29\n",
+      "Pour k = 16, NMI: 0.49, ARI: 0.31\n",
+      "Pour k = 17, NMI: 0.48, ARI: 0.30\n",
+      "Pour k = 18, NMI: 0.48, ARI: 0.29\n",
+      "Pour k = 19, NMI: 0.48, ARI: 0.29\n",
+      "Pour k = 20, NMI: 0.48, ARI: 0.31\n",
+      "Pour k = 21, NMI: 0.48, ARI: 0.30\n",
+      "Pour k = 22, NMI: 0.48, ARI: 0.30\n",
+      "Moyenne NMI: 0.48\n",
+      "Moyenne ARI: 0.30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# add cross validation\n",
+    "from sklearn.metrics import normalized_mutual_info_score, adjusted_rand_score\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "from sklearn.datasets import fetch_20newsgroups\n",
+    "\n",
+    "# Ajoutez vos fonctions dim_red et clust ici\n",
+    "\n",
+    "# import data\n",
+    "ng20 = fetch_20newsgroups(subset='test')\n",
+    "corpus = ng20.data[:2000]\n",
+    "labels = ng20.target[:2000]\n",
+    "\n",
+    "# embedding\n",
+    "model = SentenceTransformer('paraphrase-MiniLM-L6-v2')\n",
+    "embeddings = model.encode(corpus)\n",
+    "\n",
+    "# Liste pour stocker les scores\n",
+    "nmi_scores = []\n",
+    "ari_scores = []\n",
+    "\n",
+    "# Boucle sur un range de nombres de clusters\n",
+    "for k in range(15, 23):  # Par exemple de 2 à 10 clusters\n",
+    "    # perform dimensionality reduction\n",
+    "    red_emb = dim_red(embeddings, 20)\n",
+    "\n",
+    "    # perform clustering\n",
+    "    pred = clust(red_emb, k)\n",
+    "\n",
+    "    # evaluate clustering results\n",
+    "    nmi_score = normalized_mutual_info_score(pred, labels)\n",
+    "    ari_score = adjusted_rand_score(pred, labels)\n",
+    "\n",
+    "    # Sauvegarde des scores\n",
+    "    nmi_scores.append(nmi_score)\n",
+    "    ari_scores.append(ari_score)\n",
+    "\n",
+    "    print(f'Pour k = {k}, NMI: {nmi_score:.2f}, ARI: {ari_score:.2f}')\n",
+    "\n",
+    "# Calcul des moyennes des scores NMI et ARI\n",
+    "avg_nmi = sum(nmi_scores) / len(nmi_scores)\n",
+    "avg_ari = sum(ari_scores) / len(ari_scores)\n",
+    "\n",
+    "print(f'Moyenne NMI: {avg_nmi:.2f}')\n",
+    "print(f'Moyenne ARI: {avg_ari:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "0d2e29fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0, 22, 15, ..., -1, -1,  1])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import hdbscan\n",
+    "def clusthdbs(mat):\n",
+    "    clusterer = hdbscan.HDBSCAN(min_samples=3, min_cluster_size = 15,\n",
+    "                               metric='euclidean', \n",
+    "                               cluster_selection_method='eom')\n",
+    "    pred = clusterer.fit_predict(mat)\n",
+    "    return pred\n",
+    "\n",
+    "# import data\n",
+    "ng20 = fetch_20newsgroups(subset='test')\n",
+    "corpus = ng20.data[:2000]\n",
+    "labels = ng20.target[:2000]\n",
+    "k = len(set(labels))\n",
+    "\n",
+    "# embedding\n",
+    "model = SentenceTransformer('paraphrase-MiniLM-L6-v2')\n",
+    "embeddings = model.encode(corpus)\n",
+    "\n",
+    "# perform dimentionality reduction\n",
+    "red_emb = dim_red(embeddings, 20)\n",
+    "\n",
+    "# perform clustering\n",
+    "pred = clusthdbs(red_emb)\n",
+    "\n",
+    "pred"
    ]
   }
  ],
